# Lumenite

./: CMakeLists.txt  README.md  app.lua  benchmark.py  iplog.json  syntax.lua  users.db  users.json
examples/: app.lua  crytography1_app.lua  database1_app.lua  debug_lua.lua  demo1_app.lua  models_test.lua
examples/templates/: template_demo.html
src/: ErrorHandler.cpp  ErrorHandler.h  LumeniteApp.cpp  LumeniteApp.h  LumeniteDb.cpp  LumeniteDb.h  Router.cpp  Router.h  Server.cpp  Server.h  SessionManager.cpp  SessionManager.h  TemplateEngine.cpp  TemplateEngine.h  main.cpp
src/modules/: LumeniteCrypto.cpp  LumeniteCrypto.h  LumeniteDb.cpp  LumeniteDb.h  LumeniteSafe.cpp  LumeniteSafe.h  ModuleBase.cpp  ModuleBase.h
src/utils/: LumenitePackageManager.cpp  LumenitePackageManager.h  MimeDetector.cpp  MimeDetector.h  ProjectScaffolder.cpp  ProjectScaffolder.h  Version.h
templates/: base.html  form_test.html  index.html  template_demo.html
test/: app.lua  data.md  db_test.lua  test.lua  test.sqlite
test/.lumenite/: __syntax__.lua
test/Test-Project/: README.md  config.luma
test/Test-Project/.lumenite/: db.lua
test/Test-Project/app/: filters.lua
test/Test-Project/app/routes/: web.lua
test/Test-Project/db/: test_lmdb.sqlite
test/Test-Project/plugins/: modules.cpl
test/TestProject/: .gitignore  README.md  app.lua  config.luma
test/TestProject/.lumenite/: __syntax__.lua  db.lua
test/TestProject/Project/: README.md  config.luma
test/TestProject/Project/app/: models.lua
test/TestProject/Project/app/routes/: api.lua  web.lua
test/TestProject/Project/templates/: template.html
test/TestProject/app/: filters.lua  middleware.lua  models.lua  routes.lua
test/TestProject/app/routes/: api.lua  web.lua
test/TestProject/plugins/: modules.cpl
test/TestProject/templates/: template.html
test/templates/: index.html
